--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -138,9 +138,10 @@
               & Organic Firms</h2>
           </div>
           <div class="quote-text mb-35 wow fadeInDown" data-wow-delay=".3s">
-            <p>Sed ut perspiciatis omnis natus error volup accusantiue
-              doloremque laudantium totam aperiam eaque quae abllcs
-              veritatis quasi architecto beatae vitae.</p>
+            <p>Cuisine en résonance avec l’esprit du lieu: authentique
+              et gourmande. Elle respire la joie de vivre et la générosité.
+              Une promenade des saveurs du terroir, produits du marché local,
+              et de notre potager. Simplement du plaisir à la table d’hôtes!</p>
           </div>
           <div class="tab-content-box wow fadeInUp">
             <ul class="nav nav-tabs mb-20">
@@ -154,7 +155,8 @@
             <div class="tab-content">
               <div class="tab-pane fade show active" id="mission">
                 <div class="content-box-gap">
-                  <p>Natus error sit voluptatem accusantium doloremque laudatium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt</p>
+                  <p> Échanges de pensées, humour, humeur, états d’âmes,
+                    beaucoup d’humanité s’échangent autour d’une cuisine généreuse.</p>
                   <div class="avatar-box d-flex align-items-center">
                     <div class="thumb">
                       <img src="assets/images/user-1.jpg" alt="Admin Thumb">
@@ -167,7 +169,8 @@
               </div>
               <div class="tab-pane fade" id="vision">
                 <div class="content-box-gap">
-                  <p>Natus error sit voluptatem accusantium doloremque laudatium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt</p>
+                  <p> Échanges de pensées, humour, humeur, états d’âmes,
+                    beaucoup d’humanité s’échangent autour d’une cuisine généreuse.</p>
                   <div class="avatar-box d-flex align-items-center">
                     <div class="thumb">
                       <img src="assets/images/user-1.jpg" alt="Admin Thumb">
@@ -287,62 +290,10 @@
     </div>
   </div>
 </section><!--====== End Service Section ======-->
-<!--====== Start Gallery Section ======-->
-<section class="projects-section pt-130 pb-95 p-r z-1">
-  <div class="container">
-    <div class="row align-items-end">
-      <div class="col-lg-8 col-md-9">
-        <div class="section-title section-title-left mb-60 wow fadeInLeft">
-          <span class="sub-title">Project Gallery</span>
-          <h2>We’ve Done Many Other Projects
-            Let’s See Gallery Insights</h2>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-3">
-        <div class="project-arrows mb-60 float-md-right wow fadeInRight"></div>
-      </div>
-    </div>
-    <div class="projects-slider-one">
-      <div class="project-item wow fadeInUp">
-        <div class="img-holder">
-          <img style="height:auto  ;" src="assets/images/portfolio/img-1.jpg" alt="Gallery Image">
-          <div class="hover-portfolio">
-            <div class="hover-content">
-              <h3 class="title"><a href="portfolio-details.html">Golder Wheat</a></h3>
-              <p><a href="#">Agriculture</a>,<a href="#">Foods</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="project-item wow fadeInDown">
-        <div class="img-holder">
-          <img src="assets/images/portfolio/img-2.jpg" alt="Gallery Image">
-          <div class="hover-portfolio">
-            <div class="hover-content">
-              <h3 class="title"><a href="portfolio-details.html">Golder Wheat</a></h3>
-              <p><a href="#">Agriculture</a>,<a href="#">Foods</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="project-item wow fadeInUp">
-        <div class="img-holder">
-          <img src="assets/images/portfolio/img-3.jpg" alt="Gallery Image">
-          <div class="hover-portfolio">
-            <div class="hover-content">
-              <h3 class="title"><a href="portfolio-details.html">Golder Wheat</a></h3>
-              <p><a href="#">Agriculture</a>,<a href="#">Foods</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
 
-    </div>
-  </div>
-</section>
-<!--====== End Gallery Section ======-->
+
 <!--====== Start Counter Section ======-->
-<section class="fun-fact">
+ <!--  <section class="fun-fact">
   <div class="big-text mb-105 wow fadeInUp"><h2>Statistics</h2></div>
   <div class="container">
     <div class="counter-wrap-one wow fadeInDown">
@@ -384,7 +335,7 @@
       </div>
     </div>
   </div>
-</section>
+</section>  -->
 <!--====== End Counter Section ======-->
 <!--====== Start Service Section ======-->
 <section class="popular-service p-r z-1 pt-130 pb-135">
@@ -597,124 +548,4 @@
   </div>
 </section>
 <!--====== End Contact Section ======-->
-<!--====== Start Blog Section ======-->
-<section class="blog-section p-r z-1 pt-130 pb-100">
-  <div class="container">
-    <div class="row align-items-end">
-      <div class="col-xl-7 col-lg-10">
-        <div class="section-title section-title-left mb-60 wow fadeInLeft">
-          <span class="sub-title">Latest News Blog</span>
-          <h2>Read Latest News & Blog
-            Get Every Updates</h2>
-        </div>
-      </div>
-      <div class="col-lg-5">
-        <div class="button-box float-lg-right mb-60 wow fadeInRight">
-          <a href="blog-standard.html" class="main-btn bordered-btn bordered-yellow">View More Newss</a>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="blog-post-item-one mb-30 wow fadeInLeft">
-          <div class="post-thumbnail">
-            <img src="assets/images/blog/img-1.jpg" alt="Post Image">
-          </div>
-          <div class="entry-content">
-            <a href="#" class="cat-btn">Organic Foods</a>
-            <h3 class="title"><a href="#">Smashing Podcast Episode 44 With Chris
-              Ferdinandi Is The Web Dead</a></h3>
-            <div class="post-meta">
-              <ul>
-                <li><span><i class="far fa-calendar-alt"></i><a href="#">25 March 2022</a></span></li>
-                <li><span><i class="far fa-comments"></i><a href="#">Comment (5)</a></span></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="blog-post-item-one mb-30 wow fadeInRight">
-          <div class="post-thumbnail">
-            <img src="assets/images/blog/img-2.jpg" alt="Post Image">
-          </div>
-          <div class="entry-content">
-            <a href="#" class="cat-btn">Organic Foods</a>
-            <h3 class="title"><a href="#">Powerful Terminal And Command-Line  Tools  Modern Web Development</a></h3>
-            <div class="post-meta">
-              <ul>
-                <li><span><i class="far fa-calendar-alt"></i><a href="#">25 March 2022</a></span></li>
-                <li><span><i class="far fa-comments"></i><a href="#">Comment (5)</a></span></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="blog-post-item-one mb-30 wow fadeInLeft">
-          <div class="post-thumbnail">
-            <img src="assets/images/blog/img-3.jpg" alt="Post Image">
-          </div>
-          <div class="entry-content">
-            <a href="#" class="cat-btn">Organic Foods</a>
-            <h3 class="title"><a href="#">Smashing Podcast Episode 44 With Chris
-              Ferdinandi Is The Web Dead</a></h3>
-            <div class="post-meta">
-              <ul>
-                <li><span><i class="far fa-calendar-alt"></i><a href="#">25 March 2022</a></span></li>
-                <li><span><i class="far fa-comments"></i><a href="#">Comment (5)</a></span></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!--====== End Blog Section ======-->
-<!--====== Start Partner Section ======-->
-<section class="partners-section yellow-bg pt-50 pb-60 p-r z-1">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-xl-6 col-lg-10">
-        <div class="section-title text-center mb-30 wow fadeInUp">
-          <h4>We Have More Then 1235+ Global Partners</h4>
-        </div>
-      </div>
-    </div>
-    <div class="partner-slider-one wow fadeInDown">
-      <div class="partner-item">
-        <div class="partner-img">
-          <img src="assets/images/partner/img-1.png" alt="partner image">
-        </div>
-      </div>
-      <div class="partner-item">
-        <div class="partner-img">
-          <img src="assets/images/partner/img-2.png" alt="partner image">
-        </div>
-      </div>
-      <div class="partner-item">
-        <div class="partner-img">
-          <img src="assets/images/partner/img-3.png" alt="partner image">
-        </div>
-      </div>
-      <div class="partner-item">
-        <div class="partner-img">
-          <img src="assets/images/partner/img-4.png" alt="partner image">
-        </div>
-      </div>
-      <div class="partner-item">
-        <div class="partner-img">
-          <img src="assets/images/partner/img-5.png" alt="partner image">
-        </div>
-      </div>
-      <div class="partner-item">
-        <div class="partner-img">
-          <img src="assets/images/partner/img-6.png" alt="partner image">
-        </div>
-      </div>
-      <div class="partner-item">
-        <div class="partner-img">
-          <img src="assets/images/partner/img-3.png" alt="partner image">
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!--====== End Partner Section ======-->
+<!--===== Start Blog Section ======-->
