--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,8 +36,8 @@
       <div class="primary-menu">
         <!-- Site Branding -->
         <div class="site-branding">
-          <a href="index.html" class="brand-logo"><img src="assets/images/logo/logo-3.png" alt="Site Logo"></a>
-          <a href="index.html" class="sticky-logo"><img src="assets/images/logo/logo-1.png" alt="Site Logo"></a>
+          <a href="index.html" class="brand-logo"><img src="assets/images/logo4.png" alt="Site Logo"></a>
+          <a href="index.html" class="sticky-logo"><img style="width: 100px ; height: 50px" src="assets/images/logo4.png" alt="Site Logo"></a>
         </div>
         <!-- Nav inner Menu -->
         <div class="nav-inner-menu">
@@ -45,7 +45,7 @@
           <div class="nav-menu">
             <!--=== Mobile Logo ===-->
             <div class="mobile-logo mb-30 d-block d-xl-none text-center">
-              <a href="index.html" class="brand-logo"><img src="assets/images/logo/logo-1.png" alt="Site Logo"></a>
+              <a href="index.html" class="brand-logo"><img src="assets/images/logo3.png" alt="Site Logo"></a>
             </div>
             <!--=== Navbar Call Button ===-->
             <div class="call-button text-center">
